--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Justin Carter",
 	"description": "project for free code camp project on back-end",
+	"keywords": ["funny", "charming", "freecodecamp"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
