--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Justin Carter",
 	"description": "project for free code camp project on back-end",
 	"keywords": ["funny", "charming", "freecodecamp"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
